--- a/template/index.html
+++ b/template/index.html
@@ -15,14 +15,6 @@
 
   <!-- CUSTOM CSS -->
   <link href="/resource/css/style.css" rel="stylesheet"/>
- 
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
 
 </head>
 
@@ -42,7 +34,7 @@
 				<li class="nav-item" th:each="res : ${FS.list('/content/en')}" th:if="${res.container}" th:classappend="${res.equals(currentPage)} ? active : notactive">
 					<a class="nav-link" th:href="${'/content/en/'+res.name+'.html'}">[[${#strings.capitalize(res.name)}]]</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-					  <a class="dropdown-item" href="#" th:each="sub : ${FS.list('/content/en/'+res.name+'/')}" th:if="${sub.container}">[[${#strings.capitalize(sub.name)}]]</a>
+					  <a class="dropdown-item" th:href="${'/content/en/'+res.name+'/'+sub.name+'.html'}" th:each="sub : ${FS.list('/content/en/'+res.name+'/')}" th:if="${sub.container}">[[${#strings.capitalize(sub.name)}]]</a>
 					</div>
 				</li>
 			</ul>
@@ -65,46 +57,22 @@
 					<p>You ain't gonna need it!</p>
 					
 				</div>
-				<!-- Advance Search -->
-				<div class="advance-search">
-					<form action="#">
-						<div class="row">
-							<!-- Store Search -->
-							<div class="col-lg-6 col-md-12">
-								<div class="block d-flex">
-									<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="search" placeholder="Search for store"/>
-								</div>
-							</div>
-							<div class="col-lg-6 col-md-12">
-								<div class="block d-flex">
-									<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="search" placeholder="Search for store"/>
-									<!-- Search Button -->
-									<button class="btn btn-main">SEARCH</button>
-								</div>
-							</div>
-						</div>
-					</form>
-					
-				</div>
-				
+<!-- Advance Search -->
+        <span th:utext="${search}">
+          f
+        </span>		
 			</div>
 		</div>
 	</div>
 	<!-- Container End -->
 </section>
 
-<!--===================================
-=            Client Slider            =
-====================================-->
-
-
-
 
 <!--==========================================
 =            Main Container Section            =
 ===========================================-->
-
-<section class=" section">
+<script src="/resource/js/jquery-3.3.1.min.js"></script>
+<section class=" section-up">
 	<!-- Container Start -->
 	<div class="container">
 		<div class="row">
@@ -128,19 +96,17 @@
         <!-- About -->
         <div class="block about">
           <!-- description -->
-          <p class="alt-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="alt-color" th:text="${footer}">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
       </div>
       <!-- Link list -->
       <div class="col-lg-2 offset-lg-1 col-md-3">
         <div class="block">
-          <h4>Site Pages</h4>
+          <h4>Footer Menu</h4>
           <ul>
-            <li><a href="#">Boston</a></li>
-            <li><a href="#">How It works</a></li>
-            <li><a href="#">Deals Coupons</a></li>
-            <li><a href="#">Articls Tips</a></li>
-            <li><a href="#">Terms of Services</a></li>
+            <li class="nav-item" th:each="res : ${FS.list('/content/footer')}" th:if="${res.container}">
+              <a th:href="${'/content/footer/'+res.name+'.html'}" th:text="${res.name}">Footer Entry</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -202,12 +168,11 @@
 </footer>
 
   <!-- JAVASCRIPTS -->
-  <script src="/resource/js/jquery-3.3.1.min.js"></script>
   <script src="/resource/js/jquery-ui.min.js"></script>
   <script src="/resource/js/bootstrap.bundle.min.js"></script>
   
   <script src="/resource/js/main.js"></script>
-  
+  <script type="text/javascript" src="/resource/js/slick.min.js"></script>
 </body>
 
 </html>
