Fix simple template

--- a/template/simple.html
+++ b/template/simple.html
@@ -1,3 +1,5 @@
-<div th:utext="${main}" class="col-12"></div>
+<div class="widget dashboard-container col-12 product-details">
+	<div th:utext="${main}" class="col-12"></div>
 
-<p th:text="${currentPage}">Current Page</p>
+	<p th:text="${currentPage}">Current Page</p>
+</div>
