--- a/template/news.html
+++ b/template/news.html
@@ -1,5 +1,7 @@
-<ul class="news">
+<div class="widget dashboard-container col-12 product-details">
+	<ul class="news">
 	<li class="nav-item active" th:each="n : ${news}">
 		<span th:text="${n}">News Entry</span>
 	</li>
-</ul>
+	</ul>
+</div>
