Docx Support, shop templates

--- a/template/hero-teaser.html
+++ b/template/hero-teaser.html
@@ -1,4 +1,4 @@
-<div class="col-12">
+<div class="col-12" style="margin-top:45px">
 	<!-- Section title -->
 	<div class="section-title">
 		<h2>All Categories</h2>
