--- a/template/index.html
+++ b/template/index.html
@@ -32,9 +32,9 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item" th:each="res : ${FS.list('/content/en')}" th:if="${res.container}" th:classappend="${res.equals(currentPage)} ? active : notactive">
-					<a class="nav-link" th:href="${'/content/en/'+res.name+'.html'}">[[${#strings.capitalize(res.name)}]]</a>
+					<a class="nav-link" th:href="${res.qualifiedName+'.html'}">[[${res.displayName}]]</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-					  <a class="dropdown-item" th:href="${'/content/en/'+res.name+'/'+sub.name+'.html'}" th:each="sub : ${FS.list('/content/en/'+res.name+'/')}" th:if="${sub.container}">[[${#strings.capitalize(sub.name)}]]</a>
+					  <a class="dropdown-item" th:href="${res.qualifiedName+'/'+sub.name+'.html'}" th:each="sub : ${FS.list(res.qualifiedName+'/')}" th:if="${sub.container}">[[${sub.displayName}]]</a>
 					</div>
 				</li>
 			</ul>
