--- a/template/shop.html
+++ b/template/shop.html
@@ -3,28 +3,29 @@
 	<h3 class="widget-header">The Product</h3>
 	<ul class="nav nav-pills  justify-content-center" id="pills-tab" role="tablist">
 		<li class="nav-item">
-			<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Product Details</a>
+			<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#description" role="tab" aria-controls="pills-home" aria-selected="true">Product Details</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Specifications</a>
+			<a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#gallery" role="tab" aria-controls="pills-contact" aria-selected="false">Photos</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Photos</a>
+			<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#techspec" role="tab" aria-controls="pills-profile" aria-selected="false">Specifications</a>
 		</li>
 	</ul>
 
 	<div class="tab-content">
-		<h3 class="tab-title">Product Description</h3>
+		<h3 id="description" class="tab-title">Product Description</h3>
+
 		<p th:text="${description}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia laudantium beatae quod perspiciatis, neque dolores eos rerum, ipsa iste cum culpa numquam amet provident eveniet pariatur, sunt repellendus quas voluptate dolor cumque autem molestias. Ab quod quaerat molestias culpa eius, perferendis facere vitae commodi maxime qui numquam ex voluptatem voluptate, fuga sequi, quasi! Accusantium eligendi vitae unde iure officia amet molestiae velit assumenda, quidem beatae explicabo dolore laboriosam mollitia quod eos, eaque voluptas enim fuga laborum, error provident labore nesciunt ad. Libero reiciendis necessitatibus voluptates ab excepturi rem non, nostrum aut aperiam? Itaque, aut. Quas nulla perferendis neque eveniet ullam?</p>
 
-		<h3 class="tab-title">Photos</h3>
+		<h3 id="gallery" class="tab-title">Photos</h3>
 		
         <!-- Slides Container -->
         <div class="gallery">
             <div th:each="img: ${gallery}"><img th:src="${img[0]}" /></div>
         </div>
 
-		<h3 class="tab-title">Specifications</h3>
+		<h3 id="techspec" class="tab-title">Specifications</h3>
 		<table class="table table-striped">
 		<thead>
 			<th th:each="head : ${table[0]}" th:text="${head}">
